Refactoring test cases from GetNotifcationActionTest.Java to GetSessionResponseStatsActionTest.java